wmt-application-web/src/main/webapp/css/WMT.css
/*  WMT.css  
    author: Theodore Walton
*/

/*#coordinateOverlay {
    position: absolute;   inset the coordinate overlay's top right relative to the container's top left 
    top: 50px;
    left: 40%;
    table-layout: fixed;  fixed column widths specified below 
    pointer-events: none;  ignore mouse and touch events in the coordinate overlay 
}*/

#coordinateOverlay {
    text-shadow: 0px 0px 2px black; /* text attributes for both coordinate overlay columns */
    text-align: right;
    color: white;
}

#coordinateOverlay tr td:first-child {
    width: 50px; /* width of coordinate overlay display name column */
}

#coordinateOverlay tr td:last-child {
    width: 75px; /* width of coordinate overlay value column */
}

#canvas-wrap canvas { 
    position: relative;
    top: 0;
    left: 0; 
    z-index: 0 !important; 
    width: 100%; 
    height: 100%;
    padding-left: 0;
    padding-right: 0
        
}
#globe { 
    padding-left: 0;
    padding-right: 0        
}

.container-full {
  margin: 0 auto;
  width: 100%;
  height: 100%;
  min-height:100%;
}

.navbar-nomargin {
    margin-bottom: 0;   /* override default of 20px
}

.non-interactive { 
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
    pointer-events: none;
} 

.rest-panel-bottom {
    margin: 0 auto;
    position: absolute;
    bottom: 0;
    height: 100px; /* was 25%;*/
    width: 100%;
}

.row {
    margin-right: 0;
    margin-left: 0;
}

.row-full {
    margin-right: 0;
    margin-left: 0;
    height: 100%;
}
#restSolarData {
    text-shadow: 0px 0px 2px black; /* text attributes for both coordinate overlay columns */
    text-align: center;
    color: white;
}
#restSolarData tr td:first-child {
    width: 50px; /* width of coordinate overlay display name column */
}
#restSolarData tr td:last-child {
    width: 75px; /* width of coordinate overlay value column */
}


#restTerrainData {
    text-shadow: 0px 0px 2px black; /* text attributes for both coordinate overlay columns */
    text-align: center;
    color: white;
}
#restTerrainData tr td:first-child {
    width: 50px; /* width of coordinate overlay display name column */
}
#restTerrainData tr td:last-child {
    width: 75px; /* width of coordinate overlay value column */
}

#restWeatherData {
    text-shadow: 0px 0px 2px black; /* text attributes for both coordinate overlay columns */
    text-align: center;
    color: white;
}
#restWeatherData tr td:first-child {
    width: 50px; /* width of coordinate overlay display name column */
}
#restWeatherData tr td:last-child {
    width: 75px; /* width of coordinate overlay value column */
}

